k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shubham-bhavsar-hero-service
spec:
  type: NodePort
  selector:
    app: shubham-bhavsar-hero
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
